# hummingbot-trading

./: .gitignore  _audit.py  _compare.py  _explore_data.py  _final_sweep.py  _run_batch.py  _stress_test.py  _sweep.py  _sweep_atr.py  _sweep_combo.py  _sweep_smc.py  _sweep_v2.py  _validate_atr.py  _validate_leverage.py  _verify.py  docker-compose.yml  package-lock.json  playwright_test.mjs  playwright_test2.mjs  playwright_test3.mjs  playwright_test4.mjs  playwright_test5.mjs  playwright_test6.mjs  playwright_test7.mjs  playwright_test8.mjs  use-project-python.ps1
hbot/: .coverage  .env.example  .gitignore  AI_MEAN_REVERSION_GRID_V1.md  AI_TREND_FOLLOWING_V1.md  BACKLOG.md  README.md  STRATEGY_ARCHITECTURE.md  _check_bc2.py  pyproject.toml
hbot/apps/realtime_ui/: README.md  app.js  index.html  styles.css
hbot/apps/realtime_ui_v2/: .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
hbot/compose/: docker-compose.yml
hbot/config/: agent_artifact_retention_policy.json  artifact_retention_policy.json  coordination_policy_v1.json  data_requirements.yml  exchange_account_map.json  exchange_profiles.json  fee_profiles.json  ml_governance_policy_v1.json  multi_bot_policy_v1.json  parity_thresholds.json  portfolio_limits_v1.json  reconciliation_thresholds.json  regime_policy.json
hbot/config/mosquitto/: mosquitto.conf
hbot/config/strategy_catalog/: catalog_v1.json
hbot/controllers/: README.md  __init__.py  auto_calibration_mixin.py  bot1_baseline_v1.py  bot5_ift_jota_v1.py  bot6_cvd_divergence_v1.py  bot7_adaptive_grid_v1.py  bot7_pullback_v1.py  connector_runtime_adapter.py  core.py  daily_state_store.py  epp_logging.py  epp_v2_4.py  epp_v2_4_bot1.py  epp_v2_4_bot5.py  epp_v2_4_bot6.py  epp_v2_4_bot7.py  epp_v2_4_bot7_ml.py  epp_v2_4_bot7_pullback.py  fee_manager.py  fee_resolver.py  fill_handler_mixin.py  market_making_types.py  ops_guard.py  order_sizer.py  paper_engine.py  position_mixin.py  position_recovery.py  price_buffer.py  protective_stop.py  regime_detector.py  risk_evaluator.py  risk_mixin.py  risk_policy.py  shared_mm_controller.py  shared_mm_logging.py  shared_mm_types.py  shared_mm_v24.py  shared_runtime_v24.py  sim_broker.py  (+8 more)
hbot/controllers/analytics/: __init__.py  performance_metrics.py
hbot/controllers/backtesting/: __init__.py  adapter_registry.py  atr_mm_adapter.py  atr_mm_v2_adapter.py  book_synthesizer.py  combo_mm_adapter.py  config_loader.py  csv_importer.py  data_catalog.py  data_catalog_events.py  data_downloader.py  data_requirements.py  data_store.py  directional_mm_adapter.py  harness.py  harness_cli.py  hb_stubs.py  historical_feed.py  metrics.py  ml_signal_adapter.py  momentum_scalper_adapter.py  pullback_adapter.py  pullback_adapter_v2.py  replay_clock.py  replay_connector.py  replay_harness.py  replay_injection.py  replay_market_data_provider.py  replay_market_reader.py  report.py  runtime_adapter.py  simple_adapter.py  smc_mm_adapter.py  sweep.py  sweep_cli.py  ta_composite_adapter.py  ta_signals.py  types.py  walkforward.py
hbot/controllers/bots/: __init__.py
hbot/controllers/common/: __init__.py  indicators.py
hbot/controllers/directional/: __init__.py  bot5_ift_jota_v1.py  bot6_cvd_divergence_v1.py  bot7_pullback_v1.py  epp_v2_4_bot5.py  epp_v2_4_bot6.py  epp_v2_4_bot7.py  epp_v2_4_bot7_pullback.py
hbot/controllers/directional_trading/: ai_mean_reversion_grid_v1.py  ai_trend_following_v1.py  directional_max_min_v1.py  paper_smoke_test_v1.py  systematic_alpha_v1.py  systematic_alpha_v2.py
hbot/controllers/market_making/: __init__.py  bot5_ift_jota_v1.py  bot6_cvd_divergence_v1.py  bot7_adaptive_grid_v1.py  epp_v2_4.py  epp_v2_4_bot1.py  epp_v2_4_bot5.py  epp_v2_4_bot6.py  epp_v2_4_bot7.py  pmm_avellaneda_v2.py  pmm_rsi_llm.py  shared_mm_v24.py
hbot/controllers/ml/: __init__.py  _indicators.py  feature_diagnostics.py  feature_pipeline.py  label_generator.py  model_registry.py  regime_policy.py  regime_validation.py  research.py
hbot/controllers/paper_engine_v2/: __init__.py  accounting.py  budget_checker.py  config.py  connector_patches.py  data_feeds.py  desk.py  fee_models.py  fill_models.py  funding_simulator.py  hb_bridge.py  hb_event_fire.py  latency_model.py  matching_engine.py  portfolio.py  risk_engine.py  signal_consumer.py  state_store.py  types.py
hbot/controllers/research/: __init__.py  candidate_validator.py  evaluate.py  experiment_orchestrator.py  exploration_prompts.py  exploration_session.py  explore_cli.py  family_registry.py  hypothesis_registry.py  lifecycle_manager.py  llm_client.py  paper_workflow.py  quality_gates.py  report_generator.py  robustness_scorer.py
hbot/controllers/runtime/: __init__.py  base.py  contracts.py  core.py  data_context.py  directional_config.py  directional_core.py  directional_runtime.py  execution_context.py  kernel.py  logging.py  risk_context.py  (+3 more)
hbot/data/: README.md  backtest_jobs.sqlite3
hbot/docs/: README.md  external_signal_risk_architecture.md
hbot/env/: .env.template
hbot/kzay_capital_desk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hbot/monitoring/: OBSERVABILITY_CONTRACT.md
hbot/platform_lib/: __init__.py  exceptions.py
hbot/scripts/: add-bot.sh  backup.sh  check_telemetry_stream.py  deploy.sh  log-cleanup.sh  migrate_parquet_zstd.py  probe_hb_paper_connectors.py  rollback.sh  setup_dev_venv.ps1  status.sh  update.sh
hbot/security/: firewall-rules.sh
hbot/services/: __init__.py  bot_metrics_exporter.py  control_plane_metrics_exporter.py
hbot/simulation/: __init__.py  accounting.py  adverse_inference.py  budget_checker.py  config.py  data_feeds.py  desk.py  exceptions.py  fee_models.py  fill_models.py  funding_simulator.py  latency_model.py  matching_engine.py  portfolio.py  risk_engine.py  state_store.py  types.py
(+9726 files in other folders)
